# Meadowlark

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  browse.py  pyproject.toml  test.py
ai/: architecture.md  log.md  notes.md
meadowlark/: __init__.py  bindings.cpp
